2008-11-15	Brian J. Tarricone <bjt23@cornell.edu>

	* xfce4-notifyd-config/main.c: Remove a couple strings.
	* po/xfce4-notifyd.pot: Update .pot file.

2008-11-15	Brian J. Tarricone <bjt23@cornell.edu>

	* NEWS: Add NEWS file for first release.
	* xfce4-notifyd-config/main.c: Sort items in the themes list.

2008-11-15	Brian J. Tarricone <bjt23@cornell.edu>

	* xfce4-notifyd/{org.freedesktop.Notifications.service.in,Makefile.am}:
	  Install xfce4-notifyd to $libexecdir instead of $bindir

2008-11-15	Brian J. Tarricone <bjt23@cornell.edu>

	* xfce4-notifyd-config/xfce4-notifyd-config.glade: Change window
	  title to simply 'Notifications'
	* po/xfce4-notifyd.pot: Update .pot file

2008-11-15	Brian J. Tarricone <bjt23@cornell.edu>

	* xfce4-notifyd-config/Makefile.am, xfce4-notifyd-config/main.c,
	  xfce4-notifyd-config/xfce4-notifyd-config.desktop.in,
	  xfce4-notifyd-config/xfce4-notifyd-config.glade: make config dialog
	  pluggable into xfce settings manager, add --version option

2008-11-15	Brian J. Tarricone <bjt23@cornell.edu>

	* README: add readme content

2008-11-15	Brian J. Tarricone <bjt23@cornell.edu>

	* xfce4-notifyd-config/xfce4-notifyd-config.glade: set spin buton
	  page size to zero

2008-11-07	Brian J. Tarricone <bjt23@cornell.edu>

	* themes/Smoke/gtkrc: fix button colors in smoke theme

2008-09-21	Brian J. Tarricone <bjt23@cornell.edu>

	* xfce4-notifyd/Makefile.am, xfce4-notifyd/galago-dbus.xml,
	  xfce4-notifyd/notify-dbus.xml, xfce4-notifyd/xfce-notify-daemon.c: 
	  just because it's hosted on galago-project.org, doesn't mean
	  anything.

2008-09-20	Brian J. Tarricone <bjt23@cornell.edu>

	* xfce4-notifyd/xfce-notify-daemon.c: don't send the 2nd argument
	  (close reason) with the NotificationClosed signal for some reason libnotify doesn't support it, so apps don't receive
	  the signal.  lovely.

2008-09-05	Brian J. Tarricone <bjt23@cornell.edu>

	* autogen.sh: new git revision subst

2008-08-25	Brian J. Tarricone <bjt23@cornell.edu>
