@@ -21,3 +21,14 @@ AUTOMAKE_OPTIONS = \
 
 distclean-local:
 	-rm -rf *.cache *~
+
+checksums: distcheck
+	sha1sum $(PACKAGE)-$(VERSION).tar.bz2 > $(PACKAGE)-$(VERSION).tar.bz2.sha1.asc
+
+gpg-sign: checksums
+	gpg -b --armor $(PACKAGE)-$(VERSION).tar.bz2
+
+release: gpg-sign
+	-mkdir releases/
+	mv $(PACKAGE)-$(VERSION).tar.bz2* releases/
+	-rm $(PACKAGE)-$(VERSION).tar.gz
